--- a/Tracker/Base.lproj/Main.storyboard
+++ b/Tracker/Base.lproj/Main.storyboard
@@ -2,13 +2,15 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--Track-->
+        <!--Tracker-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="TrackViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="TrackerViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -17,13 +19,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hen-NF-7Nj">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hen-NF-7Nj" customClass="TPKeyboardAvoidingScrollView">
                                 <rect key="frame" x="16" y="40" width="343" height="578"/>
                                 <subviews>
-                                    <view alpha="0.79999999999999982" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b09-XM-ycc">
+                                    <view alpha="0.79999999999999982" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b09-XM-ycc" userLabel="TrackerView">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="425"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZa-G2-1vj">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZa-G2-1vj" userLabel="SelectButton">
                                                 <rect key="frame" x="298" y="15" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="30" id="0uE-mp-LL7"/>
@@ -33,10 +35,32 @@
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fju-yj-JuR" userLabel="TrackUrgeButton">
+                                                <rect key="frame" x="172" y="128" width="74" height="30"/>
+                                                <state key="normal" title="Track Urge">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PHc-V6-eQQ" userLabel="TrackButton">
+                                                <rect key="frame" x="86" y="128" width="37" height="30"/>
+                                                <state key="normal" title="Track">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                            </button>
+                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hMF-dc-NyX">
+                                                <rect key="frame" x="67" y="263" width="240" height="162"/>
+                                            </pickerView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstItem="hMF-dc-NyX" firstAttribute="width" secondItem="b09-XM-ycc" secondAttribute="width" multiplier="0.7" id="2DV-OG-biK"/>
+                                            <constraint firstItem="Fju-yj-JuR" firstAttribute="leading" secondItem="b09-XM-ycc" secondAttribute="centerX" id="6Oc-9a-sN5"/>
+                                            <constraint firstItem="Fju-yj-JuR" firstAttribute="top" secondItem="b09-XM-ycc" secondAttribute="centerY" multiplier="0.6" id="Emm-1g-0bE"/>
+                                            <constraint firstItem="PHc-V6-eQQ" firstAttribute="top" secondItem="b09-XM-ycc" secondAttribute="centerY" multiplier="0.6" id="JIT-mp-tr6"/>
+                                            <constraint firstAttribute="bottom" secondItem="hMF-dc-NyX" secondAttribute="bottom" id="W63-CS-JDD"/>
                                             <constraint firstItem="aZa-G2-1vj" firstAttribute="top" secondItem="b09-XM-ycc" secondAttribute="top" constant="15" id="aa2-Dp-TbD"/>
+                                            <constraint firstAttribute="centerX" secondItem="hMF-dc-NyX" secondAttribute="centerX" constant="-15.5" id="d0u-Ey-OgD"/>
+                                            <constraint firstItem="PHc-V6-eQQ" firstAttribute="leading" secondItem="b09-XM-ycc" secondAttribute="centerX" multiplier="0.5" id="fNw-3y-kPP"/>
                                             <constraint firstAttribute="trailing" secondItem="aZa-G2-1vj" secondAttribute="trailing" constant="15" id="phY-Kc-Wc5"/>
                                             <constraint firstAttribute="height" constant="425" id="t6G-kz-c7Q"/>
                                         </constraints>
@@ -59,7 +83,7 @@
                             <constraint firstItem="Hen-NF-7Nj" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="20" id="edm-fy-tsA"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Track" image="full__0000s_0106_note" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Tracker" image="full__0000s_0106_note" id="acW-dT-cKf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
